--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body{
         margin-left: 20px!important;
     }
     hr{
-        width: 428px!important;
+        width: 388px!important;
         margin-left: 0px;
     }
     .line{
@@ -347,11 +347,12 @@ body{
         width: 356px!important;
         height: 22px;
         margin-top: -35px!important;
-        margin-left: 20px!important;
+        margin-left: 30px!important;
     }
     #search-form{
         width: 388px!important;
         margin-top: -5px!important;
+        margin-left: 10px;
     }
     .search section input{
         width: 255px!important;
